16. DIP (인터페이스를 상위로 옮김 [HOW를 WHAT으로 옮김 ]